url 디코딩 구현
파일명 없으면 해당 경로 base62로 디코딩

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
     <form class = "box"  method = "post">
         <div>
-            <input type="text" name="url" placeholder="Input URL...">
+            <input type="text" name="originurl" placeholder="Input URL...">
             <button type = "submit">Fire!</button>
         </div>
     </form>
